dropdown issues resolved and alignment issues resolved

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -804,9 +804,12 @@ li,
 }
 
 i {
+  //color:#d64841;
+  color:#c6cfda;
+}
+.errormessage{
   color:#d64841;
 }
-
 .cstm-width .mat-form-field-wrapper {
   width: 0px !important;
   position: absolute !important;
